app/assets/stylesheets/custom.css.scss
$navbar-default-bg: #312312;

$light-orange: #ff8c00;

$navbar-default-color: $light-orange;

$jumbotron-bg: #66FFCC;
#logo {
  float: left;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 10px;
  font-size: 2em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  font-family: cursive;
}

body { padding-bottom: 70px; }

#logo:hover {
  color: white;
  text-decoration: none;
}

body{
  padding-top: 80px;
}

.nav-item{
  margin-left: 25px;
  float: left;
  margin-top: 20px;
}

.nav-ul-item{
  padding-left: 25px;
  float: left;
  margin-top: 20px;
}

.center{
  text-align: center;
}

.msg-size{
  font-size: 20px;
}

h1, h2, h3, h4{
  line-height: 1;
}

h1{
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2{
  font-size: 2em;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}
.midrow{
  text-align: left;
  font-size: 25px;
  font-weight: bold;
}

.left{
  text-align: left;
  letter-spacing: .5px;
}

#copy-right{
  font-family: cursive;
  color: white;
  padding: 10px;
}

.gravatar{
  border-radius: 10px;
}

.chef_info{
  margin-top: 10px;

}

.well{
  background-color: red;
}

input, textarea, select, .uneditable-input{
  border: 1px solid #d2d2d2;
  border-radius: 5px;
  width: 100%;
  margin-bottom: 15px;
}

input {
  height: auto !important;
}

.input-checkbox input {
  width: auto !important;
}

#button{
  width: 49%;
}

#form-gap{
  margin-bottom: 20px;
}

span.picture{
  margin-top: 10px;
  input{
    border: 0;
  }
}

.show_pic{
  margin: 10px 10px 10px 10px;
}

@import "bootstrap-sprockets";
@import "bootstrap";

